...
                    .edgesIgnoringSafeArea(.all)
                ZStack(alignment: .leading) {
                    SearchView(rssURL: $inputURL)

                }

                Button("Add New Feed") {
                    if inputURL.trimmingCharacters(in: .whitespacesAndNewlines).isEmpty {
                        errorAlert.show(error: NSError(
                            domain: "InputValidation",
                            code: 100,
                            userInfo: [NSLocalizedDescriptionKey: "Please enter a valid RSS URL"]
                        ))
...
